--- a/dune
+++ b/dune
@@ -2,7 +2,7 @@
   (name duration)
   (public_name duration)
   (modules duration duration_cap_tee)
-  (ocamlopt_flags (-S)))
+  (ocamlopt_flags (-S -function-sections)))
 
 (test
   (name tests)
